# User-Application

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  settings.py  stream_manager.py
app/gui/: dashboard.py  eye_panel.py  main_window.py  settings_dialog.py  utils.py
app/network/: camera_receiver.py  connection_state.py  tof_receiver.py
