[project]
name = "stereo-vision-app"
version = "0.1.0"
description = "Stereo Vision System — User Application (Raspberry Pi 5 dual ToF + dual camera)"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
